--- a/templates/index.html
+++ b/templates/index.html
@@ -1,69 +1,22 @@
-<!doctype html>
-<html lang="uk">
+{% extends 'base.html' %}
 
-<head>
-    <!-- Голова: опис сторінки та підключення стилів -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Мій перший урок</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/style.css"> 
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    <div class="about">
-    <!-- Тіло: увесь вміст сторінки -->
-    <header class='container'>
-        <!-- Шапка сайту: назва, логотип, навігація -->
-        <button type="button" class="btn btn-light">Light</button>
+{% block content %}
+<main class="container">
+  <h1 class=text-center my-5> LogikaBlog</h1>
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+  {% for article in articles %}
+  <div class="col">
+    <div class="card">
+      <img src="{{ url_for('static', filename='img/'+article[3]) }}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{article[1]}}</h5>
+        <p class="card-text">{{article[4]}}</p>
+        <a href="{{ url_for('article_page', article_id=article[0]) }}" class="btn btn-primary">Читати</a>
+      </div>
     </div>
-    </header>
-    <main class="container">
-        <h1 style="color: #d35512;">Привіт із сервера!</h1>
-        <!-- Головний контент сторінки -->
-    </main>
-    <footer>
-        <!-- Підвал сайту: про сайт, автор, контакти тощо -->
-    </footer>
-    <!-- Підключення JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-
-</html> 
+  </div>
+  
+  {% endfor %}
+</div>
+</main>
+{% endblock content %}
