--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,28 @@
 {% extends 'base.html' %}
-
 {% block content %}
+    
 <main class="container">
-  <h1 class=text-center my-5> LogikaBlog</h1>
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-  {% for article in articles %}
-  <div class="col">
-    <div class="card">
-      <img src="{{ url_for('static', filename='img/'+article[3]) }}" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">{{article[1]}}</h5>
-        <p class="card-text">{{article[4]}}</p>
-        <a href="{{ url_for('article_page', article_id=article[0]) }}" class="btn btn-primary">Читати</a>
-      </div>
-    </div>
-  </div>
+    <h1 class="text-center my-5">LogikaBlog</h1>
   
-  {% endfor %}
-</div>
-</main>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+
+                {% for article in articles %}
+               
+                <div class="col ">
+                    <div class="card mb-5">
+                        <img src="{{ url_for('static', filename='img/'+article[3]) }}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{article[1]}}</h5>
+                            <p class="card-text">{{article[4]}}</p>
+                            <a class="btn btn-primary stretched-link" href="{{ url_for('article_page', article_id=article[0]) }}" role="button">Читати</a>
+                        </div>
+                    </div>
+                </div>
+                
+                {% endfor %}
+            </div>
+            
+            
+            
+            
 {% endblock content %}
