--- a/templates/new_article.html
+++ b/templates/new_article.html
@@ -5,7 +5,7 @@
 {% block content %}
     
 <main class="container py-5 ">
-
+    {%include "alerts.html"%}
     <h1 class="text-center mb-5">Нова стаття</h1>
     <form action="" method="post" enctype="multipart/form-data">
         <div class="mb-3">
