--- a/templates/base.html
+++ b/templates/base.html
@@ -23,13 +23,13 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{{ url_for('new_article') }}">Головна</a>
+                    <a class="nav-link" aria-current="page" href="{{ url_for('index') }}">Головна</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Розділи</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{{ url_for('new_article') }}">
                       <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
                       Додати статтю 
 
@@ -49,9 +49,9 @@
                   </li>
               
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                <form class="d-flex" role="search" action="{{ url_for('search', filename='') }}">
+                  <input class="form-control me-2" type="search" required name="query" placeholder="Введіть запит" aria-label="Search">
+                  <button class="btn btn-outline-danger" type="submit">Шукати</button>
                 </form>
               </div>
             </div>
@@ -64,8 +64,14 @@
     </main>
     {% endblock content %}
     <footer>
-        <!-- Підвал сайту: про сайт, автор, контакти тощо -->
-    </footer>
+      <!-- Підвал сайту: про сайт, автор, контакти тощо -->
+       <div class="container py-5 ml-auto">
+          <a class="navbar-brand" href="{{ url_for('index') }}">LogikaBlog</a>
+          Сайт зробив Бублик Назарій &copy;
+       2025
+       </div>
+       
+  </footer>
     <!-- Підключення JavaScript -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
